Generators doc done
